# FrameFab

./: .gitignore  CMakeLists.txt  Fiber.vcxproj  Fiber.vcxproj.filters  LICENSE.txt  Process2Grasshopper.cpp  Process2Grasshopper.h  README.md  mainwindow.cpp  mainwindow.h  renderingwidget.cpp  renderingwidget.h
Collision/: BaseBulk.cpp  BaseBulk.h  Collision.cpp  Collision.h  CylinderBulk.cpp  ExtruderCone.cpp  ExtruderCone.h  Geometry.h  Parallelogram.h  Polyface.h  QuadricCollision.cpp  QuadricCollision.cpp.orig  QuadricCollision.h  QuadricCollision.h.orig  ResolveAngle.h  SpecialBulk.cpp  SpecialBulk.h  Triangle.h
Collision/NewCollision/: QuadricCollision.cpp.orig  QuadricCollision.h.orig
Fiber/: main.cpp  mainwindow.h
Fiber/FiberPrint/: FiberPrintPlugIn.cpp  FiberPrintPlugIn.h  ProcessAnalyzer.h
Fiber/GeneratedFiles/: qrc_mainwindow.cpp
Fiber/GeneratedFiles/Debug/: moc_renderingwidget.cpp
Fiber/QP/: Timer.cpp
Fiber/Stiffness/: StiffnessIO.h  StiffnessSolver.h
FiberPrint/: ADMMCut.cpp  ADMMCut.cpp.orig  ADMMCut.h  ADMMCut.h.orig  BFAnalyzer.cpp  BFAnalyzer.cpp.orig  BFAnalyzer.h  DualGraph.cpp  DualGraph.h  DualGraph.h.orig  FFAnalyzer.cpp  FFAnalyzer.cpp.orig  FFAnalyzer.h  FFAnalyzer.h.orig  FiberPrintPARM.cpp  FiberPrintPARM.cpp.orig  FiberPrintPARM.h  FiberPrintPlugIn.cpp  FiberPrintPlugIn.cpp.orig  FiberPrintPlugIn.h  FiberPrintPlugIn.h.orig  GraphCut.cpp  GraphCut.cpp.orig  GraphCut.h  GraphCut.h.orig  NoneCut.cpp  NoneCut.h  NormalCut.cpp  NormalCut.cpp.orig  NormalCut.h  NormalCut.h.orig  ProcAnalyzer.cpp  ProcAnalyzer.h  Process2Grasshopper.cpp  ProcessAnalyzer.cpp  SeqAnalyzer.cpp  SeqAnalyzer.cpp.orig  SeqAnalyzer.h  SeqAnalyzer.h.BACKUP.7968.h  SeqAnalyzer.h.BASE.7968.h  (+3 more)
GeneratedFiles/: qrc_mainwindow.cpp
GeneratedFiles/Debug/: moc_mainwindow.cpp
GeneratedFiles/Release/: moc_mainwindow.cpp  moc_renderingwidget.cpp
GlobalFunctions/: GCommon.h  Timer.cpp  Timer.h
Grasshopper/: FF2Rhino.gh
I_O/: Loader.cpp  Loader.h  Statistics.cpp  Statistics.h  TSPLIB_Loader.h
MainWindow/: ArcBall.h  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.h.orig  renderingwidget.cpp  renderingwidget.cpp.orig  renderingwidget.h  renderingwidget.h.orig
MiniMeshFrame/: CoordTrans.cpp  CoordTrans.h  GCommon.h  GUtil.h  IllCondDetector.cpp  IllCondDetector.h  Statistics.h  StiffnessIO.cpp  StiffnessIO.h  TSPSolver.cpp  TSPSolver.h  mainwindow.cpp  mainwindow.h  renderingwidget.cpp  renderingwidget.h
MiniMeshFrame/Collision/: BaseBulk.h  Bulk.cpp  Bulk.h  Collision.cpp  Collision.h  CommonBulk.cpp  CommonBulk.h  CylinderBulk.cpp  CylinderBulk.h  ExtruderCone.cpp  ExtruderCone.h  Geometry.h  Parallelogram.h  Polyface.h  ResolveAngle.cpp  ResolveAngle.h  SpecialBulk.cpp  Triangle.h
MiniMeshFrame/FiberPrint/: DualGraph.cpp  DualGraph.h  FiberPrintPARM.cpp  FiberPrintPARM.h  FiberPrintPlugIn.cpp  FiberPrintPlugIn.h  GraphCut.cpp  GraphCut.h  ProcessAnalyzer.cpp  ProcessAnalyzer.h  SeqAnalyzer.cpp  SeqAnalyzer.h  Stiffness.cpp  Stiffness.h
MiniMeshFrame/GeneratedFiles/: qrc_mainwindow.cpp  ui_mainwindow.h
MiniMeshFrame/I_O/: Loader.cpp  Loader.h  Statistics.cpp  Statistics.h  TSPLIB_Loader.cpp  TSPLIB_Loader.h
MiniMeshFrame/LP/: LPFactory.cpp  LPFactory.h  LPMosek.cpp  LPMosek.h  LinearP.cpp  LinearP.h
MiniMeshFrame/QP/: Loader.h  QP.h  QPFactory.h  QPMosek.cpp  QPMosek.h  Timer.cpp  Timer.h
MiniMeshFrame/Stiffness/: CoordTrans.cpp  CoordTrans.h  GCommon.h  GUtil.h  IllCondDetector.cpp  IllCondDetector.h  Stiffness.cpp  Stiffness.h  StiffnessIO.cpp  StiffnessIO.h  StiffnessSolver.cpp  StiffnessSolver.h
MiniMeshFrame/TSP/: TSPSolver.cpp  TSPSolver.h
MiniMeshFrame/WireFrame/: Mesh3D.h  Vec.h  WireFrame.cpp  WireFrame.h
NewCollision/: QuadricCollision.cpp  QuadricCollision.h
QP/: QP.h  QPFactory.cpp  QPFactory.h  QPMosek.cpp  QPMosek.h  Timer.cpp
Stiffness/: CoordTrans.h  GCommon.h  IllCondDetector.cpp  IllCondDetector.h  Stiffness.cpp  Stiffness.cpp.orig  Stiffness.h  Stiffness.h.orig  StiffnessIO.cpp  StiffnessIO.h  StiffnessSolver.cpp  StiffnessSolver.h
WireFrame/: Mesh3D.cpp  WireFrame.cpp  WireFrame.h
cmake/: QtCommon.cmake
cmake/modules/: FindMOSEK.cmake  FindMOSEK8.cmake~
ext/: CMakeLists.txt
ext/GTEngine/: CMakeLists.txt  Makefile
ext/GTEngine/lib/Dynamic/: libgtengine.so.3  libgtengine.so.3.6
src/: CMakeLists.txt
src/framefab/: ADMMCut.h  ArcBall.cpp  CMakeLists.txt  CoordTrans.h  DualGraph.h  ExtruderCone.cpp  ExtruderCone.h  FFAnalyzer.h  FiberPrintPlugIn.h  Geometry.h  Parallelogram.h  ProcAnalyzer.h  QPFactory.h  QPMosek.h  QuadricCollision.cpp  QuadricCollision.h  ResolveAngle.h  SeqAnalyzer.h  Stiffness.h  TSPLIB_Loader.h  WireFrame.cpp  WireFrame.h  globalFunctions.h  main.cpp  mainwindow.cpp  mainwindow.h  renderingwidget.cpp  renderingwidget.h
